[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/graphics/ui/player_deck.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/cards/king.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/normal_text.tres" type="Theme" id=3]
[ext_resource path="res://assets/graphics/ui/buttons/place_card_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/buttons/place_card_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/ui/buttons/place_card_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/ui/ui_cards/place_card_bg.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/cards/citizen.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/cards/soldier.png" type="Texture" id=9]
[ext_resource path="res://scripts/cpu.gd" type="Script" id=10]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/kkc_#g12312_exit.png-cf14c28e5b41adff328c483bae3d9200.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/kkc_#g12958_exit.png-d421bcbeb8476cbe30661561c183e8e2.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/kkc_#g12331_exit.png-6d2a106d891a2bb33486016cbc308356.stex"

[node name="cpu" type="Control"]
anchor_left = 0.707031
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="deck" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -214.5
margin_right = 123.0
margin_bottom = 214.5
texture = ExtResource( 1 )
expand = true

[node name="card" type="Control" parent="deck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -190.5
margin_right = 113.0
margin_bottom = 198.5

[node name="KING" type="Control" parent="deck/card"]
anchor_left = 0.386667
anchor_top = 0.794344
anchor_right = 0.635556
anchor_bottom = 0.994859
__meta__ = {
"_edit_use_anchors_": true
}

[node name="king_card" type="TextureRect" parent="deck/card/KING"]
anchor_right = 0.981818
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/KING/king_card"]
margin_left = 4.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "15"

[node name="strength_label_2" type="Label" parent="deck/card/KING/king_card"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -4.0
margin_right = 4.01818
margin_bottom = 14.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "15"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/KING/king_card"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/KING/king_card/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/KING/king_card/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/KING/king_card/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="SOLDIERS" type="Control" parent="deck/card"]
anchor_left = 0.382223
anchor_top = 0.528278
anchor_right = 0.631112
anchor_bottom = 0.728792
__meta__ = {
"_edit_use_anchors_": true
}

[node name="soldier_card_1" type="TextureRect" parent="deck/card/SOLDIERS"]
anchor_right = 0.981818
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/SOLDIERS/soldier_card_1"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "9"

[node name="strength_label_2" type="Label" parent="deck/card/SOLDIERS/soldier_card_1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -3.00003
margin_right = 4.01818
margin_bottom = 15.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "9"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/SOLDIERS/soldier_card_1/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_1/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_1/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="soldier_card_2" type="TextureRect" parent="deck/card/SOLDIERS"]
anchor_left = -1.41071
anchor_top = 0.653846
anchor_right = -0.428896
anchor_bottom = 1.65385
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/SOLDIERS/soldier_card_2"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "9"

[node name="strength_label_2" type="Label" parent="deck/card/SOLDIERS/soldier_card_2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -3.00003
margin_right = 4.01818
margin_bottom = 15.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "9"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/SOLDIERS/soldier_card_2/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_2/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_2/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="soldier_card_3" type="TextureRect" parent="deck/card/SOLDIERS"]
anchor_left = 1.375
anchor_top = 0.628205
anchor_right = 2.35682
anchor_bottom = 1.6282
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/SOLDIERS/soldier_card_3"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "9"

[node name="strength_label_2" type="Label" parent="deck/card/SOLDIERS/soldier_card_3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98181
margin_top = -2.99998
margin_right = 4.01819
margin_bottom = 15.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "9"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/SOLDIERS/soldier_card_3/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_3/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_3/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="soldier_card_4" type="TextureRect" parent="deck/card/SOLDIERS"]
anchor_left = 1.375
anchor_top = -1.11538
anchor_right = 2.35682
anchor_bottom = -0.115384
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/SOLDIERS/soldier_card_4"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "9"

[node name="strength_label_2" type="Label" parent="deck/card/SOLDIERS/soldier_card_4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98181
margin_top = -2.99997
margin_right = 4.01819
margin_bottom = 15.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "9"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_4"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/SOLDIERS/soldier_card_4/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_4/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_4/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="soldier_card_5" type="TextureRect" parent="deck/card/SOLDIERS"]
anchor_left = -1.375
anchor_top = -1.1282
anchor_right = -0.393182
anchor_bottom = -0.128205
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/SOLDIERS/soldier_card_5"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "9"

[node name="strength_label_2" type="Label" parent="deck/card/SOLDIERS/soldier_card_5"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -3.00003
margin_right = 4.01818
margin_bottom = 15.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "9"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_5"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/SOLDIERS/soldier_card_5/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_5/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_5/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="soldier_card_6" type="TextureRect" parent="deck/card/SOLDIERS"]
anchor_left = -0.0178571
anchor_top = -1.11538
anchor_right = 0.963961
anchor_bottom = -0.115384
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/SOLDIERS/soldier_card_6"]
margin_left = 4.0
margin_top = 3.0
margin_right = 12.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "9"

[node name="strength_label_2" type="Label" parent="deck/card/SOLDIERS/soldier_card_6"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -3.00002
margin_right = 4.01818
margin_bottom = 15.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "9"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_6"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/SOLDIERS/soldier_card_6/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_6/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/SOLDIERS/soldier_card_6/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="CITIZENS" type="Control" parent="deck/card"]
anchor_left = 0.382223
anchor_top = 0.0141388
anchor_right = 0.631112
anchor_bottom = 0.214653
__meta__ = {
"_edit_use_anchors_": true
}

[node name="citizen_card_1" type="TextureRect" parent="deck/card/CITIZENS"]
anchor_left = -0.0178571
anchor_top = 0.0128205
anchor_right = 0.963961
anchor_bottom = 1.01282
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/CITIZENS/citizen_card_1"]
margin_left = 4.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "10"

[node name="strength_label_2" type="Label" parent="deck/card/CITIZENS/citizen_card_1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -4.0
margin_right = 4.01818
margin_bottom = 14.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "10"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/CITIZENS/citizen_card_1/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_1/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_1/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="citizen_card_2" type="TextureRect" parent="deck/card/CITIZENS"]
anchor_left = -1.39286
anchor_top = 0.397436
anchor_right = -0.411039
anchor_bottom = 1.39744
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/CITIZENS/citizen_card_2"]
margin_left = 4.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "10"

[node name="strength_label_2" type="Label" parent="deck/card/CITIZENS/citizen_card_2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -4.0
margin_right = 4.01818
margin_bottom = 14.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "10"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/CITIZENS/citizen_card_2/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_2/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_2/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[node name="citizen_card_3" type="TextureRect" parent="deck/card/CITIZENS"]
anchor_left = 1.21429
anchor_top = 0.371795
anchor_right = 2.1961
anchor_bottom = 1.37179
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strength_label_1" type="Label" parent="deck/card/CITIZENS/citizen_card_3"]
margin_left = 4.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "10"

[node name="strength_label_2" type="Label" parent="deck/card/CITIZENS/citizen_card_3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.98182
margin_top = -4.0
margin_right = 4.01818
margin_bottom = 14.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "10"

[node name="place_card_trigger" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="place_card_ui" type="TextureRect" parent="deck/card/CITIZENS/citizen_card_3/place_card_trigger"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -26.0
margin_right = 25.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true

[node name="place_card_button" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_3/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -6.0
margin_right = 19.0
margin_bottom = 6.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true

[node name="cancel_card_button" type="TextureButton" parent="deck/card/CITIZENS/citizen_card_3/place_card_trigger/place_card_ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.5
margin_top = -7.0
margin_right = 3.5
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
expand = true

[connection signal="pressed" from="deck/card/KING/king_card/place_card_trigger" to="." method="_on_place_card_trigger_pressed"]
[connection signal="pressed" from="deck/card/KING/king_card/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_king_card_button_pressed"]
[connection signal="pressed" from="deck/card/KING/king_card/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_1/place_card_trigger" to="." method="_on_place_card_trigger_soldier_card_1_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_1/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_soldier1_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_1/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_soldier_1_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_2/place_card_trigger" to="." method="_on_place_card_trigger_soldier_card_2_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_2/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_soldier2_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_2/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_soldier_2_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_3/place_card_trigger" to="." method="_on_place_card_trigger_soldier_card_3_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_3/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_soldier3_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_3/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_soldier_3_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_4/place_card_trigger" to="." method="_on_place_card_trigger_soldier_card_4_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_4/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_soldier4_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_4/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_soldier_4_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_5/place_card_trigger" to="." method="_on_place_card_trigger_soldier_card_5_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_5/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_soldier5_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_5/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_soldier_5_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_6/place_card_trigger" to="." method="_on_place_card_trigger_soldier_card_6_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_6/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_soldier6_card_button_pressed"]
[connection signal="pressed" from="deck/card/SOLDIERS/soldier_card_6/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_soldier_6_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_1/place_card_trigger" to="." method="_on_place_card_trigger_civilian_card_1_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_1/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_citizen1_card_button_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_1/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_civilian_1_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_2/place_card_trigger" to="." method="_on_place_card_trigger_civilian_card_2_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_2/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_citizen2_card_button_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_2/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_civilian_2_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_3/place_card_trigger" to="." method="_on_place_card_trigger_civilian_card_3_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_3/place_card_trigger/place_card_ui/place_card_button" to="." method="_on_place_citizen3_card_button_pressed"]
[connection signal="pressed" from="deck/card/CITIZENS/citizen_card_3/place_card_trigger/place_card_ui/cancel_card_button" to="." method="_on_cancel_card_button_civilian_3_pressed"]
